# rustorm

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  Changelog.md  LICENSE  README.md  TODO.md  bootstrap-test.sh  create_sqlite_sakila.sh  execute-data-import.sh  gather-prerequisites.sh  generate_readme.sh  import-sakila-pg.sh  install-postgresql-client.sh  rename-database-host.sh  run_clippy.sh  rustfmt.toml  sakila.db-journal  setup.sh  test.sh  test_pg.sh
.github/: FUNDING.yml
.github/workflows/: rust.yml
codegen/: Cargo.toml
codegen/src/: column_derive.rs  dao_derive.rs  lib.rs  table_derive.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: column_derive.rs  dao_derive.rs  lib.rs  table_derive.rs
crates/dao/: Cargo.toml
crates/dao/src/: column_name.rs  common.rs  dao.rs  error.rs  interval.rs  lib.rs  rows.rs  table_name.rs  value.rs
dao/: Cargo.toml
dao/src/: column_name.rs  common.rs  dao.rs  error.rs  interval.rs  lib.rs  rows.rs  table_name.rs  value.rs
dao_codegen/: Cargo.toml
dao_codegen/examples/: derive_dao_usage.rs
dao_codegen/src/: column_derive.rs  lib.rs  table_derive.rs
examples/: derive_dao_usage.rs  insert_to_sqlite.rs  insert_usage.rs  insert_usage_mysql.rs  select_usage.rs  select_usage_mysql.rs  select_usage_sqlite.rs  show_tables_mysql.rs  simple_select.rs  update_usage_mysql.rs
src/: column.rs  common.rs  dao_manager.rs  database.rs  database2.rs  database_mut.rs  entity.rs  entity2.rs  entity_mut.rs  error.rs  foreign.rs  lib.rs  pg.rs  platform.rs  platform2.rs  platform_mut.rs  pool.rs  record.rs  record_manager.rs  sq.rs  sqlite.rs  table.rs  types.rs  util.rs
src/db_auth/: mod.rs  previlege.rs
src/my/: mod.rs
src/pg/: column_info.rs  interval.rs  mod.rs  numeric.rs  table_info.rs
src/sq/: mod.rs
src/sqlite/: mod.rs
src/users/: mod.rs  previlege.rs
