[package]
name = "rustorm_codegen"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "code gen provides macro for generating code on data access objects on table metadata"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
dao = {path = "../dao", version = "0.1.0"}

[lib]
proc-macro = true
