[package]
name = "rustorm_codegen"
version = "0.5.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "code gen provides macro for generating code on data access objects on table metadata"
repository = "https://github.com/ivanceras/rustorm"
documentation = "https://docs.rs/rustorm"
keywords = ["orm", "postgresql", "sqlite"]
edition = "2018"

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
rustorm_dao = { path = "../dao", version = "0.5.0" }


[lib]
proc-macro = true
